chore: bump version

--- a/kon.csproj
+++ b/kon.csproj
@@ -8,6 +8,7 @@
         <PublishAot>true</PublishAot>
         <InvariantGlobalization>true</InvariantGlobalization>
         <StaticWebAssetsEnabled>false</StaticWebAssetsEnabled>
+        <Version>1.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
