--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
         run: dotnet publish -c Release -o .
 
       - name: Pack files
-        run: tar -czf "kon-${GITHUB_REF_NAME}.tar.gz" kon LICENSE
+        run: tar -czf "kon-${GITHUB_REF_NAME}-linux-amd64.tar.gz" kon LICENSE
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+      - name: Release
+        uses: softprops/action-gh-release@v2
         with:
-          path: kon-*.tar.gz
+          files: kon-*.tar.gz
